swen430as2/tests/valid/null/Null_Valid_1.while
null Null() {
  return null;
}


void main() {
    assert Null() == null;
}