swen430as2/tests/invalid/unions/UnionType_Invalid_3-TC01.while
int|null f() {
    return false;
}
